--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-levalasztas/bizonylatkapcsolat-levalasztas.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-levalasztas/bizonylatkapcsolat-levalasztas.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Irat leválasztása</h5>
-  <p>Biztosan le akarja választani ezt az iratot a bizonylatról?</p>
+  <div class="editform-row">
+    Biztosan le akarja választani ezt az iratot a bizonylatról?
+  </div>
   <div class="editform-okcancel" style="margin-bottom: 10px">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
