--- a/src/app/csoport/csoport-jog/csoport-jog.component.html
+++ b/src/app/csoport/csoport-jog/csoport-jog.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>A csoport jogai</h5>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
+  <table>
     <tbody>
     <tr *ngFor="let item of DtoCsoportLehetsegesJog; let i = index">
       <td>
