--- a/src/app/esemenynaplo/esemenynaplo.component.html
+++ b/src/app/esemenynaplo/esemenynaplo.component.html
@@ -5,7 +5,7 @@
       <i class="fa fa-search" aria-hidden="true"></i>
     </button>
   </div>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
+  <table>
     <thead>
     <tr>
       <th>Id</th>
