--- a/src/app/logon/szerepkorvalasztas/szerepkorvalasztas.component.html
+++ b/src/app/logon/szerepkorvalasztas/szerepkorvalasztas.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Szerepkörválasztás</h5>
   <div>
-    <table class="table table-bordered table-sm table-responsive" style="border: none">
+    <table>
       <thead>
       <tr>
         <th>Id</th>
