--- a/src/app/ugyfel/ugyfel-tabla/ugyfel-tabla.component.html
+++ b/src/app/ugyfel/ugyfel-tabla/ugyfel-tabla.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-sm table-responsive" style="border: none">
+<table>
   <thead>
   <tr>
     <th *ngIf="zoom"></th>
