--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-tabla/bizonylatkapcsolat-tabla.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-tabla/bizonylatkapcsolat-tabla.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-sm table-responsive" style="border: none">
+<table>
   <thead>
   <tr>
     <th></th>
@@ -22,12 +22,12 @@
 
     <ng-container *ngFor="let item of items; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
+        <td class="itemID itemIcon"
             (click)="clickforlevalasztas(i)">
           <i class="fa fa-minus" aria-hidden="true"></i>
         </td>
 
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+        <td class="itemID"
             (click)="clickforid(i)">{{item.Bizonylatkapcsolatkod}}
         </td>
 
