--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-vagolaprol/bizonylatkapcsolat-vagolaprol.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-vagolaprol/bizonylatkapcsolat-vagolaprol.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Irat beillesztése vágólapról</h5>
-  <app-vagolap></app-vagolap>
+  <div class="editform-row">
+    <app-vagolap></app-vagolap>
+  </div>
   <div class="editform-okcancel" style="margin-bottom: 10px">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
