--- a/src/app/csoport/csoport-felhasznalo/csoport-felhasznalo.component.html
+++ b/src/app/csoport/csoport-felhasznalo/csoport-felhasznalo.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>A csoport felhasználói</h5>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
+  <table>
     <tbody>
     <tr *ngFor="let item of DtoCsoportFelhasznalo; let i = index">
       <td>
