--- a/src/app/dokumentum/dokumentum-letoltes/dokumentum-letoltes.component.html
+++ b/src/app/dokumentum/dokumentum-letoltes/dokumentum-letoltes.component.html
@@ -1,5 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Dokumentum letöltése</h5>
-  <div *ngIf="!kesz">Letöltés, kis türelmet...</div>
-  <div *ngIf="kesz">A letöltés kész!</div>
+  <div class="editform-row">
+    <div *ngIf="!kesz">Letöltés, kis türelmet...</div>
+    <div *ngIf="kesz">A letöltés kész!</div>
+  </div>
 </div>
