--- a/src/app/tools/tetel-torles/tetel-torles.component.html
+++ b/src/app/tools/tetel-torles/tetel-torles.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret">
   <h5>{{cim}} törlése</h5>
-  <p>Biztosan törölni akarja ezt a tételt?</p>
+  <div class="editform-row">Biztosan törölni akarja ezt a tételt?</div>
   <div class="editform-okcancel" style="margin-bottom: 10px">
     <button class="editform-okbutton" (click)="doOk()">Ok</button>
     <button class="editform-cancelbutton" (click)="doCancel()">Mégsem</button>
