--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,30 @@ html, body {
   font-weight: normal;
 }
 th {
+  border: 1px solid #dddddd;
   font-weight: normal;
   font-style: normal;
+  padding: 8px;
 }
+td {
+  border: 1px solid #dddddd;
+  font-weight: normal;
+  font-style: normal;
+  padding: 8px;
+}
+table tr.active td {
+  background-color: #abdde5;
+}
+table tr.inactive td {
+  background-color: white;
+}
+.datum {
+  width: 75px;
+}
+.idobelyeg {
+  width: 130px;
+}
+
 
 .alapkeret {
   overflow: auto;
@@ -74,6 +95,9 @@ th {
 .em30width {
   width: 30em;
 }
+.em60width {
+  width: 60em;
+}
 .editform-okcancel {
   margin-top: 1em;
   margin-left: 1em;
@@ -134,6 +158,10 @@ th {
   color: blue;
   text-decoration: underline;
   cursor: pointer;
+}
+.itemIcon {
+  padding-left: 8px;
+  padding-right: 8px
 }
 
 /*.editform-okbutton:disabled,*/
