--- a/src/app/projekt/projekt-datumok/projekt-datumok.component.html
+++ b/src/app/projekt/projekt-datumok/projekt-datumok.component.html
@@ -5,27 +5,21 @@
 
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Keletkezett</div>
-        <input type="date" class="form-control form-control-sm oszlop3" id="keletkezett"
+        <input type="date" class="editform-date em10width" id="keletkezett"
                [(ngModel)]="Keletkezett" name="keletkezett">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Megrendelve</div>
-        <input type="date" class="form-control form-control-sm oszlop3" id="megrendelve"
+        <input type="date" class="editform-date em10width" id="megrendelve"
                [(ngModel)]="Megrendelve" name="megrendelve">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Kivitelezési határidő</div>
-        <input type="date" class="form-control form-control-sm oszlop3" id="kivhat"
+        <input type="date" class="editform-date em10width" id="kivhat"
                [(ngModel)]="KivHat" name="kivhat">
-      </div>
     </div>
 
     <div class="editform-okcancel">
