--- a/src/app/projekt/projekt-inverter/projekt-inverter.component.html
+++ b/src/app/projekt/projekt-inverter/projekt-inverter.component.html
@@ -4,35 +4,29 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Inverter</div>
-        <input type="text" class="form-control form-control-sm oszlop4" id="inverter"
+        <input type="text" class="editform-edit em15width" id="inverter"
                maxlength="50" autocomplete="off"
                [(ngModel)]="DtoEdited.Inverter"
                name="inverter">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">AC, kVA</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="ackva"
+        <input type="number" class="editform-edit em6width" id="ackva"
                [(ngModel)]="DtoEdited.Ackva"
                name="ackva">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Inverter státusz</div>
-        <div *ngFor="let entry of entries" class="form-check">
-          <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+        <div *ngFor="let entry of entries">
+          <input type="radio" name="radiogroup" id="entry"
                  [checked]="entry === selected" (change)="change(entry)">
-          <label class="form-check-label" for="entry">
+          <label for="entry">
             {{entry}}
           </label>
         </div>
-      </div>
     </div>
 
     <div class="editform-okcancel">
