--- a/src/app/projekt/projekt-napelem/projekt-napelem.component.html
+++ b/src/app/projekt/projekt-napelem/projekt-napelem.component.html
@@ -4,35 +4,29 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Napelem</div>
-        <input type="text" class="form-control form-control-sm oszlop4" id="napelem"
+        <input type="text" class="editform-edit em15width" id="napelem"
                maxlength="50" autocomplete="off"
                [(ngModel)]="DtoEdited.Napelem"
                name="napelem">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">DC, kW</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="dckw"
+        <input type="number" class="editform-edit em6width" id="dckw"
                [(ngModel)]="DtoEdited.Dckw"
                name="dckw">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Napelem státusz</div>
-        <div *ngFor="let entry of entries" class="form-check">
-          <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+        <div *ngFor="let entry of entries">
+          <input type="radio" name="radiogroup" id="entry"
                  [checked]="entry === selected" (change)="change(entry)">
-          <label class="form-check-label" for="entry">
+          <label for="entry">
             {{entry}}
           </label>
         </div>
-      </div>
     </div>
 
     <div class="editform-okcancel">
