--- a/src/app/projekt/projekt-statusz/projekt-statusz.component.html
+++ b/src/app/projekt/projekt-statusz/projekt-statusz.component.html
@@ -6,10 +6,10 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Státusz</div>
-        <div *ngFor="let entry of projektservice.statuszszurok;let i = index" class="form-check">
-          <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+        <div *ngFor="let entry of projektservice.statuszszurok;let i = index">
+          <input type="radio" name="radiogroup" id="entry"
                  [checked]="i === selected" (change)="change(i)">
-          <label class="form-check-label" for="entry">
+          <label for="entry">
             {{entry}}
           </label>
         </div>
