--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-tabla/bizonylatkapcsolat-tabla.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-tabla/bizonylatkapcsolat-tabla.component.html
@@ -22,7 +22,7 @@
 
     <ng-container *ngFor="let item of items; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-        <td class="itemID itemIcon"
+        <td class="itemIcon"
             (click)="clickforlevalasztas(i)">
           <i class="fa fa-minus" aria-hidden="true"></i>
         </td>
