--- a/src/app/tools/tabla/tabla.component.html
+++ b/src/app/tools/tabla/tabla.component.html
@@ -16,15 +16,15 @@
 
     <ng-container *ngFor="let item of items; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-        <td *ngIf="letoltes" class="itemID itemIcon"
+        <td *ngIf="letoltes" class="itemIcon"
           (click)="clickfordownload(i)">
           <i class="fa fa-arrow-down" aria-hidden="true"></i>
         </td>
-        <td *ngIf="nezet" class="itemID itemIcon"
+        <td *ngIf="nezet" class="itemIcon"
             (click)="clickforview(i)">
           <i class="fa fa-book" aria-hidden="true"></i>
         </td>
-        <td *ngIf="zoom" class="itemID itemIcon"
+        <td *ngIf="zoom" class="itemIcon"
           (click)="clickforzoom(i)">
           <i class="fa fa-check" aria-hidden="true"></i>
         </td>
