--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -4,30 +4,26 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
         <div class="editform-label">Összeg</div>
-        <input type="number" class="form-control form-control-sm oszlop3" id="osszeg"
+        <input type="number" class="editform-edit em10width" id="osszeg"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Osszeg" name="osszeg">
       </div>
 
-      <div>
+    <div class="editform-row">
         <div class="editform-label">Pénznem</div>
-        <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
-               maxlength="3" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
+        <input type="text" class="editform-edit em4width" id="penznem"
+               maxlength="3" required autocomplete="off" style="background-color: aquamarine;"
                [(ngModel)]="DtoEdited.Penznem" name="penznem">
-        <button class="toolbutton" style="margin-left: 4px; display: inline-block" type="button" (click)="PenznemZoom()">...</button>
-      </div>
+        <button class="toolbutton" type="button" (click)="PenznemZoom()">...</button>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
         <div class="editform-label">Megjegyzés</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
+        <input type="text" class="editform-edit em30width" id="megjegyzes"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Megjegyzes" name="megjegyzes">
-      </div>
     </div>
 
     <div class="editform-okcancel">
