--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{Dto.Kapcsolat}} leválasztása</h5>
-  <p>Biztosan le akarja választani ezt a tételt a projektről?</p>
+  <div class="editform-row">
+    Biztosan le akarja választani ezt a tételt a projektről?
+  </div>
   <div class="editform-okcancel" style="margin-bottom: 10px">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
