--- a/src/app/riport/beszerzes/beszerzes.component.html
+++ b/src/app/riport/beszerzes/beszerzes.component.html
@@ -4,34 +4,28 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">A teljesítés kelte</div>
-        <input type="date" class="form-control form-control-sm oszlop3" id="tol"
+        <input type="date" class="editform-date em10width" id="tol"
                [(ngModel)]="tol" name="tol">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
-        <input type="date" class="form-control form-control-sm oszlop3" id="ig"
+        <input type="date" class="editform-date em10width" id="ig"
                [(ngModel)]="ig" name="ig">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Részletek is</div>
-        <select type="text" class="form-control form-control-sm"
+        <select type="text" class="editform-combo"
                 [(ngModel)]="reszletekis" name="reszletekis">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
-      </div>
     </div>
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>
+      <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
     </div>
   </form>
 </div>
