--- a/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
@@ -25,18 +25,20 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <button (click)="doNav(1)" class="toolbutton">
-          <i class="fa fa-file" aria-hidden="true"></i>
-        </button>
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+          <button (click)="doNav(1)" class="toolbutton">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
 
-        <button (click)="doNav(2)" class="toolbutton">
-          <i class="fa fa-minus" aria-hidden="true"></i>
-        </button>
-        <button (click)="doNav(3)" class="toolbutton">
-          <i class="fa fa-edit" aria-hidden="true"></i>
-        </button>
-      </div>
+          <button (click)="doNav(2)" class="toolbutton">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button (click)="doNav(3)" class="toolbutton">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
