--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
-<div style="height: 49px"></div>
-<app-dashboard></app-dashboard>
-<div style="height: 10px"></div>
+<!--<div style="height: 49px"></div>-->
+<!--<app-dashboard></app-dashboard>-->
+<!--<div style="height: 10px"></div>-->
 
 <div style="margin-left: 1em;margin-right: 1em;width: auto;">
   <router-outlet></router-outlet>
@@ -13,6 +13,3 @@
 
 <app-errorbox></app-errorbox>
 
-<!--<div>-->
-  <!--kaki sdh dksaéd lékédlkadé ékaé da a séakséak s ékasékaé ksékas éaksé éakséaké askaékséakséa kaki-->
-<!--</div>-->
