--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -25,7 +25,7 @@
           <input type="text" class="editform-edit em15width" id="helysegnev"
                  maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                  [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
-          <button class="toolbutton" style="margin-left: 4px; display: inline-block" type="button" (click)="HelysegZoom()">...</button>
+          <button class="toolbutton" type="button" (click)="HelysegZoom()">...</button>
         </div>
       </div>
 
