--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark rounded mb-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
 
   <a class="navbar-brand" routerLink="/fooldal">{{verzioesbuild}}</a>
 
@@ -8,19 +8,13 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
+
     <ul class="navbar-nav mr-auto">
       <ng-container *ngIf="szerepkorkivalasztva">
         <app-menunode *ngFor="let node of angularmenudto" [menunode]="node"></app-menunode>
       </ng-container>
     </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="!szerepkorkivalasztva">
-        <a class="nav-link" (click)="onBejelentkezes()">Bejelentkezés</a>
-      </li>
-      <li class="nav-item" *ngIf="szerepkorkivalasztva">
-        <a class="nav-link" (click)="onKijelentkezes()">Kijelentkezés</a>
-      </li>
-    </ul>
+
   </div>
 </nav>
 
