--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -3,13 +3,13 @@
 
   <form #f="ngForm">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Csoport</div>
-        <div *ngFor="let entry of entries;let i = index" class="form-check">
-          <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+        <div *ngFor="let entry of entries;let i = index">
+          <input type="radio" name="radiogroup" id="entry"
                  [checked]="i === selected" (change)="change(i)">
-          <label class="form-check-label" for="entry">
+          <label for="entry">
             {{entry}}
           </label>
         </div>
